--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/SystemAdminLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/SystemAdminLayout.cshtml
@@ -33,11 +33,11 @@
                             <span class="hide-menu">Home</span>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                            <a class="sidebar-link" asp-controller="SystemAdmin" asp-action="AddAdministrator"  aria-expanded="false">
                                 <span>
                                     <iconify-icon icon="solar:home-smile-bold-duotone" class="fs-6"></iconify-icon>
                                 </span>
-                                <span class="hide-menu">Dashboard</span>
+                                <span class="hide-menu">Add Administrator</span>
                             </a>
                         </li>
                         <li class="nav-small-cap">
