Add Subject Add Teacher Administrator Side complete

--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/SystemAdminLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/SystemAdminLayout.cshtml
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/png" href="~/images/logos/seodashlogo.png" />
     <link rel="stylesheet" href="~/css/styles.min.css" />
 
+    <link rel="stylesheet" href="~//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+
 
 </head>
 <body>
