--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/_Layout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SchoolManagementWebApp.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="~//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 </head>
 <body>
     <header>
