Database Backup File added with script

--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AddClass.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AddClass.cshtml
@@ -14,7 +14,9 @@
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Select Teacher Coordinator</label>
-                            <input type="password" class="form-control" asp-for="TeacherCoordinator" />
+                            <select class="form-control" id="GetTeachers" >
+
+                            </select>
                         </div>
 
                         <button type="submit" class="btn btn-primary">Submit</button>
@@ -27,3 +29,6 @@
     <div class="py-6 px-6 text-center">
     </div>
 </div>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/ajax/javascript.js"></script>
