--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AddGuardian.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AddGuardian.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Guardian
 
+<partial name="Notification"></partial>
 <div class="container-fluid">
     <div class="card">
         <div class="card-body">
