--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AdmitStudent.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AdmitStudent.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Student
 <div class="container-fluid">
     <div class="card">
         <div class="card-body">
@@ -7,13 +7,69 @@
                 <div class="card-body">
                     <form method="post">
                         <div class="mb-3">
-                            <label class="form-label">Administrator UserID</label>
-                            <input type="text" class="form-control" >
+                            <label class="form-label">Student UserId </label>
+                            <input type="text" class="form-control" asp-for="StudentId" >
+
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Create a Password</label>
+                            <input type="password" class="form-control" asp-for="Password"  />
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">First Name </label>
+                            <input type="text" class="form-control" asp-for="FirstName">
 
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Create a Password</label>
-                            <input type="password" class="form-control"  />
+                            <label class="form-label">Middle Name </label>
+                            <input type="text" class="form-control" asp-for="MiddleName">
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Last Name </label>
+                            <input type="text" class="form-control" asp-for="LastName">
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Date of Birth </label>
+                            <input type="date" class="form-control" asp-for="DateOfBirth">
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Gender </label>
+                            <input type="text" class="form-control" asp-for="Gender">
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Address</label>
+                            <input type="text" class="form-control" asp-for="Address">
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Contact Number</label>
+                            <input type="text" class="form-control" asp-for="ContactNumber">
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Email Address </label>
+                            <input type="text" class="form-control" asp-for="Email">
+
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label class="form-label">Select Guardian Name </label>
+                            <select class="form-control" id="FetchGuardianData" asp-for="GuardianId">
+
+                            </select>
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Select Class </label>
+                            <select class="form-control" id="FetchAllClasses" asp-for="ClassId">
+
+                            </select>
+
                         </div>
 
                         <button type="submit" class="btn btn-primary">Submit</button>
@@ -26,3 +82,7 @@
     <div class="py-6 px-6 text-center">
     </div>
 </div>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/ajax/javascript.js"></script>
