Added Timetable Template fetch and display

--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AddTimetable.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Administrator/AddTimetable.cshtml
@@ -11,8 +11,13 @@
                     <form method="post">
                         <div class="mb-3">
                             <label class="form-label">Select Day</label>
-                            <select class="form-control">
-                                <option>Select A Day</option>
+                            <select class="form-control" asp-for="ClassId" id="FetchAllClasses"></select>
+                                
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Select Day</label>
+                            <select class="form-control" asp-for="Day">
                                 <option value="Monday">Monday</option>
                                 <option value="Tuesday">Tuesday</option>
                                 <option value="Wednesday">Wednesday</option>
@@ -23,7 +28,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Select Start Time</label>
-                            <select class="form-control">
+                            <select class="form-control" asp-for="StartTime">
                                 <option value="09:00">09:00 </option>
                                 
                                 <option value="10:00">10:00 </option>
@@ -48,9 +53,27 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Select End Time</label>
-                            <select class="form-control">
-                                
-                                <option value="09:30">09:30 </option>
+                            <select class="form-control" asp-for="EndTime">
+                                <option value="09:00">09:00 </option>
+
+                                <option value="10:00">10:00 </option>
+
+                                <option value="11:00">11:00 </option>
+
+                                <option value="12:00">12:00 </option>
+
+                                <option value="13:00">13:00 </option>
+
+                                <option value="14:00">14:00 </option>
+
+                                <option value="15:00">15:00 </option>
+
+                                <option value="16:00">16:00 </option>
+
+                                <option value="17:00">17:00 </option>
+
+                                <option value="18:00">18:00 </option>
+                                @*  <option value="09:30">09:30 </option>
                                 
                                 <option value="10:30">10:30 </option>
                                 
@@ -67,7 +90,7 @@
                                 <option value="16:30">16:30 </option>
                                 
                                 <option value="17:30">17:30 </option>
-                                <option value="18:00">18:30 </option>
+                                <option value="18:00">18:30 </option> *@
                             </select>
 
                         </div>
@@ -80,7 +103,7 @@
                         
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Select Teacher Coordinator</label>
-                            <select class="form-control" id="FetchTeacherData">
+                            <select class="form-control" id="FetchTeacherData" asp-for="TeacherId">
                                 <option>select teacher</option>
                             </select>
                         </div>
