--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/_ViewStart.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/_ViewStart.cshtml
@@ -6,6 +6,10 @@
 {
     Layout = "AdministratorLayout";
 }
+else if (HttpContextAccessor.HttpContext.Session.GetString("Student") != null)
+{
+    Layout = "StudentLayout";
+}
 else
 {
     Layout = "_Layout";
