--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/StudentLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/StudentLayout.cshtml
@@ -43,11 +43,11 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" asp-controller="Administrator" asp-action="AddTeacher" onclick="GetSubjects()" aria-expanded="false">
+                            <a class="sidebar-link" asp-controller="Student" asp-action="DisplayTimetable" onclick="GetSubjects()" aria-expanded="false">
                                 <span>
                                     <iconify-icon icon="solar:home-smile-bold-duotone" class="fs-6"></iconify-icon>
                                 </span>
-                                <span class="hide-menu">Add Teacher</span>
+                                <span class="hide-menu">Display Timetable</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
