Added timetable With Student view Timetable Teacher Dashboard

--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/_ViewStart.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/_ViewStart.cshtml
@@ -10,6 +10,10 @@ else if (HttpContextAccessor.HttpContext.Session.GetString("Student") != null)
 {
     Layout = "StudentLayout";
 }
+else if(HttpContextAccessor.HttpContext.Session.GetString("Teacher")!= null)
+{
+    Layout = "TeacherLayout";
+}
 else
 {
     Layout = "_Layout";
