--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Teacher/AddAttendance.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Teacher/AddAttendance.cshtml
@@ -1,1 +1,33 @@
-﻿
+﻿@model List<Student>
+
+
+<partial name="Notification"></partial>
+
+<div class="container-fluid">
+    <div class="card">
+        <div class="card-body">
+<table class="table ">
+                <thead class="thead-dark">
+        <tr>
+            <th scope="col">Mark Attendance</th>
+            <th scope="col">Full Name</th>
+           
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var item in Model)
+        {
+            <tr>
+                <th scope="row"></th>
+                <td>@item.FirstName @item.MiddleName @item.LastName</td>
+                
+               
+            </tr>
+        }
+        
+        
+    </tbody>
+</table>
+</div>
+</div>
+</div>
