--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/TeacherLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/TeacherLayout.cshtml
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link"  aria-expanded="false">
+                            <a class="sidebar-link" asp-controller="Teacher" asp-action="ViewStudents" aria-expanded="false">
                                 <span>
                                     <iconify-icon icon="solar:home-smile-bold-duotone" class="fs-6"></iconify-icon>
                                 </span>
