--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/LibrarianLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/LibrarianLayout.cshtml
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" asp-controller="Librarian" asp-action="IssueBook" onclick="GetSubjects()" aria-expanded="false">
+                            <a class="sidebar-link" asp-controller="Librarian" asp-action="ViewBooks1" onclick="GetSubjects()" aria-expanded="false">
                                 <span>
                                     <iconify-icon icon="solar:home-smile-bold-duotone" class="fs-6"></iconify-icon>
                                 </span>
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" asp-controller="Librarian" asp-action="ReservedBooks" onclick="GetSubjects()" aria-expanded="false">
+                            <a class="sidebar-link" asp-controller="Librarian" asp-action="ReserveBook" onclick="GetSubjects()" aria-expanded="false">
                                 <span>
                                     <iconify-icon icon="solar:home-smile-bold-duotone" class="fs-6"></iconify-icon>
                                 </span>
