Student Dashboard Changes

--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/StudentLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/StudentLayout.cshtml
@@ -234,7 +234,10 @@
                     </div>
                 </nav>
             </header>
+            <div class="container-fluid">
+
             @RenderBody()
+            </div>
         </div>
     </div>
 </body>
