Logout Button added for Administrator

--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/GuardianLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/GuardianLayout.cshtml
@@ -225,8 +225,8 @@
                         <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
                             <a href="#" target="_blank"
                                class="btn btn-primary me-2"><span class="d-none d-md-block">Check Pro Version</span> <span class="d-block d-md-none">Pro</span></a>
-                            <a href="#" target="_blank"
-                               class="btn btn-success"><span class="d-none d-md-block">Welcome  </span> <span class="d-block d-md-none">Free</span></a>
+                            <a asp-controller="Index" asp-action="Logout" target="_blank"
+                               class="btn btn-success"><span class="d-none d-md-block">Logout  </span> <span class="d-block d-md-none"></span></a>
                             <li class="nav-item dropdown">
                                 <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                                    aria-expanded="false">
