--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/AdministratorLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/AdministratorLayout.cshtml
@@ -233,10 +233,10 @@
                         <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
                             <a href="#" target="_blank"
                                class="btn btn-primary me-2"><span class="d-none d-md-block">Check Pro Version</span> <span class="d-block d-md-none">Pro</span></a>
-                            <a href="#" target="_blank"
+                            <a asp-controller="Index" asp-action="Logout" target="_blank"
                                class="btn btn-success" ><span class="d-none d-md-block" >Logout  </span> <span class="d-block d-md-none"></span></a>
-@*                             <button class="btn btn-success d-none d-md-block">Logout</button>
- *@                            <li class="nav-item dropdown">
+                            
+                            <li class="nav-item dropdown">
                                 <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                                    aria-expanded="false">
                                     <img src="/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
