Add Assignment Teacher Module

--- a/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/TeacherLayout.cshtml
+++ b/SchoolManagementWebApp/SchoolManagementWebApp/Views/Shared/TeacherLayout.cshtml
@@ -59,7 +59,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" asp-controller="Administrator" asp-action="AddGuardian" aria-expanded="false">
+                            <a class="sidebar-link" asp-controller="Teacher" asp-action="AddAssignment" aria-expanded="false">
                                 <span>
                                     <iconify-icon icon="solar:home-smile-bold-duotone" class="fs-6"></iconify-icon>
                                 </span>
@@ -109,7 +109,7 @@
                         <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
                             <a href="#" target="_blank"
                                class="btn btn-primary me-2"><span class="d-none d-md-block">Check Pro Version</span> <span class="d-block d-md-none">Pro</span></a>
-                            <a asp-controller="Index" asp-action="Index" target="_blank"
+                            <a asp-controller="Index" asp-action="Logout" target="_blank"
                                class="btn btn-success" ><span class="d-none d-md-block" >Logout  </span> <span class="d-block d-md-none"></span></a>
                             <li class="nav-item dropdown">
                                 <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
